# VeriDoc2

./: .deployment  .dockerignore  .gitignore  .pre-commit-config.yaml  AZURE_DEPLOYMENT.md  CATEGORY_FEATURE.md  Dockerfile  Makefile  README.md  azure-deploy.yml  config.py  docker-compose.yml  pyproject.toml  requirements.txt  simple_web_interface_v2.py  startup.sh  startup.txt  styles.css  tatus  verify_statements.py
.github/workflows/: ci-cd.yml  deploy.yml
archived_legacy/: EXCEL_FIXED_COLUMNS_CHANGES.md  EXCEL_VALIDATION_CHANGES.md  OPTIMIZATION_SUMMARY.md  README.md  README_OPTIMIZATION.md  README_WEB.md  start_backend.bat  start_frontend.bat  start_web_interface.bat  test_excel_validation.py  test_new_excel_structure.py  verify_statements.py
certs/: Cert.bat
config/: output_fields_config.json  project_categories_pb_cyprus_case.json  project_categories_pb_delaware_case.json  project_categories_pb_london_case.json  projects.json
legacy/: README.md  README_SIMPLE_WEB.md  simple_web_interface.py
tests/: __init__.py  test_basic.py
utils/: __init__.py  embeddings.py  status.py  text_extraction.py
